new icons, refactor actions